# ai_based_sorting_robot_arm

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/robotic_arm_controllers/share/robotic_arm_controllers/: package.sh
install/robotic_arm_custom_nodes/share/robotic_arm_custom_nodes/: package.sh
install/robotic_arm_description/share/robotic_arm_description/: local_setup.sh  package.sh
install/robotic_arm_description/share/robotic_arm_description/launch/: robotic_arm_display.launch.xml  robotic_arm_gazebo.launch.xml
install/robotic_arm_description/share/robotic_arm_description/urdf/: robotic_arm.xacro  robotic_arm_gazebo.xacro
install/robotic_arm_firmware/share/robotic_arm_firmware/: local_setup.sh  package.sh
install/robotic_arm_kinematics/lib/robotic_arm_kinematics/: geometry_point_subscriber  geometry_pont_publisher  kinematics_node  ros_arm_kdl
install/robotic_arm_kinematics/share/ament_index/resource_index/package_run_dependencies/: robotic_arm_kinematics
install/robotic_arm_kinematics/share/ament_index/resource_index/parent_prefix_path/: robotic_arm_kinematics
install/robotic_arm_kinematics/share/robotic_arm_kinematics/: package.sh  package.xml
install/robotic_arm_moveit_config/share/ament_index/resource_index/parent_prefix_path/: robotic_arm_moveit_config
install/robotic_arm_moveit_config/share/robotic_arm_moveit_config/: .setup_assistant  package.sh  package.xml
install/robotic_arm_moveit_config/share/robotic_arm_moveit_config/config/: moveit_controllers.yaml  robotic_arm.ros2_control.xacro  robotic_arm.srdf  robotic_arm.urdf.xacro
install/robotic_arm_msgs/share/robotic_arm_msgs/: local_setup.sh  package.sh
log/: latest_build
src/robotic_arm_controllers/config/: robot_arm_controllers.yaml
src/robotic_arm_description/: CMakeLists.txt
src/robotic_arm_description/launch/: robot_arm_kdl_display.launch.xml
src/robotic_arm_description/urdf/: robotic_arm.xacro  robotic_arm_controllers.xacro  robotic_arm_kdl.xacro  robotic_arm_kdl_.urdf
src/robotic_arm_kinematics/: CMakeLists.txt
src/robotic_arm_kinematics/src/: geometry_point_subscriber.cpp  geometry_pont_publisher.cpp  robotic_arm_kdl.cpp
src/robotic_arm_moveit_config/: .setup_assistant
src/robotic_arm_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  robotic_arm.srdf  ros2_controllers.yaml
